fix letter spacing

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4 {
     font-style: normal;
     font-weight: 400;
     line-height: 60%;
+    letter-spacing: 1px;
 }
 
 h1 {
